--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@slidev/cli": "^0.50.0-beta.3",
     "@slidev/theme-default": "latest",
     "@slidev/theme-seriph": "latest",
+    "markdown-it-emoji": "^3.0.0",
     "vue": "^3.5.10"
   }
 }
